--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Add links to other repositories -->
 <ul class="nav-list">
 
-  <li><a href="https://mariebridgwood.github.io/Game2Part2/" class="active">Game 3</a></li>
+  <li><a href="https://mariebridgwood.github.io/Game3/" class="active">Game 3</a></li>
 
 </ul>
 
