--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </div>
 
   <script>
+    const imageList = [
 "DSC_0742.JPG", "DSC_0748.JPG", "DSC_0773.JPG", "DSC_0776.JPG", "DSC_0790.JPG", "DSC_0792.JPG", "DSC_0793.JPG", "DSC_0795.JPG", "DSC_0798.JPG", "DSC_0813.JPG", "DSC_0819.JPG", "DSC_0820.JPG", "DSC_0822.JPG", "DSC_0823.JPG", "DSC_0826.JPG", "DSC_0829.JPG", "DSC_0830.JPG", "DSC_0840.JPG", "DSC_0841.JPG", "DSC_0849.JPG", "DSC_0856.JPG", "DSC_0859.JPG", "DSC_0860.JPG", "DSC_0871.JPG", "DSC_0874.JPG", "DSC_0878.JPG", "DSC_0892.JPG", "DSC_0895.JPG", "DSC_0896.JPG", "DSC_0897.JPG", "DSC_0898.JPG", "DSC_0899.JPG", "DSC_0907.JPG", "DSC_0910.JPG", "DSC_0918.JPG", "DSC_0924.JPG", "DSC_0926.JPG", "DSC_0927.JPG", "DSC_0929.JPG"
     ];
 
